--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,23 @@
 	border: 1px solid #000;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	/* text-align: center; */
+	margin: 100px;
+	/* text-align: right; */
 }
 
 .display {
 	grid-column: span 4;
-	text-align: center;
+	height: 50px;
+	text-align: right;
+	overflow-x: scroll;
+	/* overflow: hidden; */
 }
 
 /* .numpad {
 	grid-column: span 2;
 } */
+
+.result {
+	color: gray;
+	margin-top: 10px;
+}
