--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -1,10 +1,15 @@
 button {
 	width: 50px;
 	height: 50px;
+	color: white;
 }
 
 .numpad {
 	width: 150px;
+}
+
+.numpad button {
+	background-color: rgb(172, 172, 172);
 }
 
 .num0 {
@@ -18,7 +23,21 @@ button {
 	grid-template-columns: repeat(2, 1fr);
 }
 
+.oper-2,
+.oper-3,
+.oper-4,
+.oper-6 {
+	background-color: green;
+}
+
+.oper-0,
+.oper-1 {
+	color: black;
+	background-color: rgb(194, 194, 194);
+}
+
 .oper-5 {
+	background-color: rgb(84, 84, 194);
 	position: relative;
 	height: 100px;
 	grid-column: 2/3;
