--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,28 @@
 	/* text-align: center; */
 }
 .calculator {
-	width: 350px;
+	width: 420px;
 	border: 1px solid #000;
 	margin: 70px;
 }
 
 .display {
-	height: 50px;
+	padding-right: 5px;
+	height: 125px;
 	text-align: right;
 }
 
 button {
 	width: 70px;
 	height: 70px;
+}
+
+.integer {
+	font-size: 60px;
+	padding-bottom: 10px;
+}
+
+.expression,
+.result {
+	color: gray;
 }
