--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,17 @@
 .calculator {
 	width: 420px;
 	border: 1px solid #000;
+	border-radius: 5px;
 	margin: 70px;
+	background-color: gray;
 }
 
 .display {
-	padding-right: 5px;
+	padding-right: 20px;
 	height: 125px;
 	text-align: right;
+	box-shadow: 2px, 2px;
+	/* background-color: rgb(92, 154, 204); */
 }
 
 button {
@@ -19,11 +23,14 @@ button {
 }
 
 .integer {
+	color: rgb(137, 236, 137);
 	font-size: 60px;
-	padding-bottom: 10px;
+	padding-bottom: 15px;
+	text-shadow: 0px 0px 5px rgb(137, 236, 137);
 }
 
 .expression,
 .result {
-	color: gray;
+	color: rgb(137, 236, 137);
+	text-shadow: 0px 0px 5px rgb(137, 236, 137);
 }
