--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 .App {
 	/* text-align: center; */
+	height: 100vh;
+	/* background-color: rgb(78, 78, 78); */
 }
+
+body {
+	background-color: rgb(43, 43, 43);
+}
+
 .calculator {
 	width: 420px;
 	border: 1px solid #000;
-	border-radius: 5px;
+	border-radius: 10px;
 	margin: 70px;
 	background-color: gray;
 }
